tests/paczka1/fuzzy1/45557550.err
Error in line 10: itaG A589 58,3
Error in line 14: mXbAy A589 2,7
Error in line 24: hHqTXJBQ A303 435,0
Error in line 20: fOSgMb A303 69,4
Error in line 39: agwHP7LO A303 89,8
